# prototype_KMRL_fleet_induction

./: .env.example  .replit  DEPLOYMENT_GUIDE.md  WARP.md  cookies.txt  cookies_final.txt  cookies_test.txt  final_logout_test.txt  logout_test.txt  netlify.toml  pyproject.toml  replit.md  tailwind.config.ts  test_cookies.txt  verification_test.txt  vite.config.ts
client/: App.tsx  global.css
client/components/: CSVImporter.tsx  Layout.tsx  ModeToggle.tsx  ThemeProvider.tsx
client/components/ui/: button.tsx  card.tsx
client/config/: api.ts
client/pages/: DataFeeds.tsx  History.tsx  Index.tsx  Login.tsx  NotFound.tsx  Rules.tsx  Simulate.tsx
kmrl_backend/: db.sqlite3  manage.py  procfile
kmrl_backend/fleet/: authentication.py  ml_models.py  models.py  urls.py  views.py
kmrl_backend/fleet/migrations/: 0001_initial.py  0002_csvdatasource_mlmodel_csvupload_csvdatarow_and_more.py
kmrl_backend/kmrl_backend/: asgi.py  settings.py  urls.py  wsgi.py
netlify/functions/: api.ts
public/samples/: fitness_certificates_sample.csv  maximo_job_cards_sample.csv
server/: index.ts
server/routes/: ingest.ts
